syntax = "proto3";

package sharepubapi_v1;

message DataEntry {
    enum Type {
        UNDEFINED = 0;
        INVOICE = 1;
        PAYMENT_TRANSACTION = 2;
        LOCATION = 3;
        TRANSACTION = 4;
        AGE_VERIFICATION_SECRET = 5;
        THIRD_PARTY_ATTRIBUTE = 6;
    }
    Type type = 1;
    bytes value = 2;
}
